emg_layout/src/snapshots/emg_layout__animation__tests__anima_macro_16.snap
---
source: emg_layout/src/animation.rs
expression: "&a"
---
AnimationEdge {
    inside: AnimationInside {
        steps: StateVarLit(
            RefCell {
                value: [
                    _Step,
                    To(
                        [
                            Prop(
                                TypeName(
                                    "CssWidth",
                                ),
                                Motion {
                                    position: NotNan(
                                        1.0,
                                    ),
                                    velocity: NotNan(
                                        0.0,
                                    ),
                                    target: NotNan(
                                        1.0,
                                    ),
                                    interpolation: Spring {
                                        stiffness: NotNan(
                                            170.0,
                                        ),
                                        damping: NotNan(
                                            26.0,
                                        ),
                                    },
                                    unit: Px,
                                    interpolation_override: None,
                                },
                            ),
                        ],
                    ),
                ],
            },
        ),
        interruption: StateVarLit(
            [],
        ),
        props: [
            StateVarProperty {
                prop_sv: StateVar(
                    Prop(
                        TypeName(
                            "CssWidth",
                        ),
                        Motion {
                            position: NotNan(
                                0.95278156,
                            ),
                            velocity: NotNan(
                                -2.83322,
                            ),
                            target: NotNan(
                                0.0,
                            ),
                            interpolation: Spring {
                                stiffness: NotNan(
                                    170.0,
                                ),
                                damping: NotNan(
                                    26.0,
                                ),
                            },
                            unit: Px,
                            interpolation_override: None,
                        },
                    ),
                ),
                trace_id: 1,
            },
        ],
    },
    timing: StateAnchor(
        Timing {
            current: 16ms,
            dt: 16.666ms,
        },
    ),
    running: StateAnchor(
        true,
    ),
}
