emg_layout/src/snapshots/emg_layout__animation__tests__anima_macro_16_edge.snap
---
source: emg_layout/src/animation.rs
expression: "&root_e"

---
EmgEdgeItem {
    id: StateVar(
        StateAnchor(
            EdgeIndex(None->Some(NodeIndex("root"))),
        ),
    ),
    paths: StateAnchor(
        {
            EPath(
                [],
            ): Empty,
        },
    ),
    layout: Layout {
        w: StateVar(
            GenericSizeAnchor(
                StateAnchor(
                    Length(
                        ExactLength {
                            unit: Px,
                            value: NotNan(
                                1920.0,
                            ),
                        },
                    ),
                ),
            ),
        ),
        h: StateVar(
            GenericSizeAnchor(
                StateAnchor(
                    Length(
                        ExactLength {
                            unit: Px,
                            value: NotNan(
                                1080.0,
                            ),
                        },
                    ),
                ),
            ),
        ),
        z: StateVar(
            StateAnchor(
                0,
            ),
        ),
        origin_x: StateVar(
            GenericSizeAnchor(
                StateAnchor(
                    Length(
                        ExactLength {
                            unit: Px,
                            value: NotNan(
                                0.0,
                            ),
                        },
                    ),
                ),
            ),
        ),
        origin_y: StateVar(
            GenericSizeAnchor(
                StateAnchor(
                    Length(
                        ExactLength {
                            unit: Px,
                            value: NotNan(
                                0.0,
                            ),
                        },
                    ),
                ),
            ),
        ),
        origin_z: StateVar(
            GenericSizeAnchor(
                StateAnchor(
                    Length(
                        ExactLength {
                            unit: Px,
                            value: NotNan(
                                0.0,
                            ),
                        },
                    ),
                ),
            ),
        ),
        align_x: StateVar(
            GenericSizeAnchor(
                StateAnchor(
                    Length(
                        ExactLength {
                            unit: Px,
                            value: NotNan(
                                0.0,
                            ),
                        },
                    ),
                ),
            ),
        ),
        align_y: StateVar(
            GenericSizeAnchor(
                StateAnchor(
                    Length(
                        ExactLength {
                            unit: Px,
                            value: NotNan(
                                0.0,
                            ),
                        },
                    ),
                ),
            ),
        ),
        align_z: StateVar(
            GenericSizeAnchor(
                StateAnchor(
                    Length(
                        ExactLength {
                            unit: Px,
                            value: NotNan(
                                0.0,
                            ),
                        },
                    ),
                ),
            ),
        ),
    },
    path_styles: StateVar(
        {},
    ),
    path_layouts: StateVar(
        {
            EPath(
                [
                    EdgeIndex(None->Some(NodeIndex("root"))),
                ],
            ): Layout {
                w: StateVar(
                    GenericSizeAnchor(
                        StateAnchor(
                            Length(
                                ExactLength {
                                    unit: Px,
                                    value: NotNan(
                                        0.95278155548,
                                    ),
                                },
                            ),
                        ),
                    ),
                ),
                h: StateVar(
                    GenericSizeAnchor(
                        StateAnchor(
                            Length(
                                ExactLength {
                                    unit: Px,
                                    value: NotNan(
                                        1080.0,
                                    ),
                                },
                            ),
                        ),
                    ),
                ),
                z: StateVar(
                    StateAnchor(
                        0,
                    ),
                ),
                origin_x: StateVar(
                    GenericSizeAnchor(
                        StateAnchor(
                            Length(
                                ExactLength {
                                    unit: Px,
                                    value: NotNan(
                                        0.0,
                                    ),
                                },
                            ),
                        ),
                    ),
                ),
                origin_y: StateVar(
                    GenericSizeAnchor(
                        StateAnchor(
                            Length(
                                ExactLength {
                                    unit: Px,
                                    value: NotNan(
                                        0.0,
                                    ),
                                },
                            ),
                        ),
                    ),
                ),
                origin_z: StateVar(
                    GenericSizeAnchor(
                        StateAnchor(
                            Length(
                                ExactLength {
                                    unit: Px,
                                    value: NotNan(
                                        0.0,
                                    ),
                                },
                            ),
                        ),
                    ),
                ),
                align_x: StateVar(
                    GenericSizeAnchor(
                        StateAnchor(
                            Length(
                                ExactLength {
                                    unit: Px,
                                    value: NotNan(
                                        0.0,
                                    ),
                                },
                            ),
                        ),
                    ),
                ),
                align_y: StateVar(
                    GenericSizeAnchor(
                        StateAnchor(
                            Length(
                                ExactLength {
                                    unit: Px,
                                    value: NotNan(
                                        0.0,
                                    ),
                                },
                            ),
                        ),
                    ),
                ),
                align_z: StateVar(
                    GenericSizeAnchor(
                        StateAnchor(
                            Length(
                                ExactLength {
                                    unit: Px,
                                    value: NotNan(
                                        0.0,
                                    ),
                                },
                            ),
                        ),
                    ),
                ),
            },
        },
    ),
    other_styles: StateVar(
        Style {
            media_rules: {},
            rules: [],
            updated_at: [
                "emg_layout/src/lib.rs:675:41",
            ],
            pseudo: None,
            media: None,
            name: "",
            keyframes: Keyframes {
                frames: [],
            },
            combinator: None,
            pre_combinators: [],
        },
    ),
    node: StateAnchor(
        {
            EPath(
                [
                    EdgeIndex(None->Some(NodeIndex("root"))),
                ],
            ): EdgeData(
                EdgeData {
                    calculated: LayoutCalculated {
                        size: StateAnchor(
                            Matrix {
                                data: [
                                    0.95278155548,
                                    1080.0,
                                ],
                            },
                        ),
                        origin: StateAnchor(
                            Translation {
                                vector: Matrix {
                                    data: [
                                        0.0,
                                        0.0,
                                        0.0,
                                    ],
                                },
                            },
                        ),
                        align: StateAnchor(
                            Translation {
                                vector: Matrix {
                                    data: [
                                        0.0,
                                        0.0,
                                        0.0,
                                    ],
                                },
                            },
                        ),
                        coordinates_trans: StateAnchor(
                            Translation {
                                vector: Matrix {
                                    data: [
                                        0.0,
                                        0.0,
                                        0.0,
                                    ],
                                },
                            },
                        ),
                        matrix: StateAnchor(
                            Mat4(
                                Matrix {
                                    data: [
                                        1.0,
                                        0.0,
                                        0.0,
                                        0.0,
                                        0.0,
                                        1.0,
                                        0.0,
                                        0.0,
                                        0.0,
                                        0.0,
                                        1.0,
                                        0.0,
                                        0.0,
                                        0.0,
                                        0.0,
                                        1.0,
                                    ],
                                },
                            ),
                        ),
                        loc_styles: StateAnchor(
                            Style {
                                media_rules: {},
                                rules: [
                                    Rule {
                                        value: Length(
                                            ExactLength {
                                                unit: Px,
                                                value: NotNan(
                                                    0.95278155548,
                                                ),
                                            },
                                        ),
                                    },
                                    Rule {
                                        value: Length(
                                            ExactLength {
                                                unit: Px,
                                                value: NotNan(
                                                    1080.0,
                                                ),
                                            },
                                        ),
                                    },
                                    Rule {
                                        value: StringValue(
                                            "matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1)",
                                        ),
                                    },
                                ],
                                updated_at: [
                                    "emg_layout/src/lib.rs:901:13",
                                    "emg_layout/src/lib.rs:901:17",
                                    "emg_layout/src/lib.rs:901:31",
                                    "emg_layout/src/lib.rs:901:45",
                                ],
                                pseudo: None,
                                media: None,
                                name: "",
                                keyframes: Keyframes {
                                    frames: [],
                                },
                                combinator: None,
                                pre_combinators: [],
                            },
                        ),
                    },
                    styles_string: StateAnchor(
                        "width: 0.95278155548px;\nheight: 1080px;\ntransform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1);\n",
                    ),
                    opt_p_calculated: None,
                },
            ),
        },
    ),
    store: RefCell {
        value: the graph store,
    },
}
