emg_layout/src/snapshots/emg_layout__animation__tests__many-33-b.snap
---
source: emg_layout/src/animation.rs
expression: "&b"

---
AnimationEdge {
    inside: AnimationInside {
        steps: StateVar(
            [
                _Step,
            ],
        ),
        interruption: StateVar(
            [],
        ),
        props: [
            StateVarProperty(
                StateVar(
                    Prop(
                        "width",
                        Motion {
                            position: NotNan(
                                194.39367200871786,
                            ),
                            velocity: NotNan(
                                3419.901134261051,
                            ),
                            target: NotNan(
                                888.0,
                            ),
                            interpolation: Spring {
                                stiffness: NotNan(
                                    170.0,
                                ),
                                damping: NotNan(
                                    26.0,
                                ),
                            },
                            unit: Px,
                            interpolation_override: None,
                        },
                    ),
                ),
            ),
        ],
    },
    timing: StateAnchor(
        Timing {
            current: 33ms,
            dt: 17ms,
        },
    ),
    running: StateAnchor(
        true,
    ),
}
